# tetris-cam

./: .gitignore  CMakeLists.txt
src/: Grid.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Tetris.cpp  TetrisWidget.cpp  TetrisWidget.hpp  Tetromino.cpp  Tetromino.hpp  VideoWidget.cpp  VideoWidget.cpp.autosave  VideoWidget.hpp  fixed_point.hpp  hand.cpp  hand.h  main.cpp  src.pro
src/Tetris/: Bag.cpp  Bag.hpp  Grid.cpp  Grid.hpp  Tetris.cpp  Tetris.hpp  Tetromino.cpp  Tetromino.hpp  fixed_point.hpp  hand.cpp
